k8s/unmaintained/geoip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip-deployment
  labels:
    app: geoip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoip
  template:
    metadata:
      labels:
        app: geoip
    spec:
      containers:
        - name: geoip
          image: maxmindinc/geoipupdate
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
          - mountPath: /usr/share/GeoIP
            name: geoip-data
          imagePullPolicy: IfNotPresent
      volumes:
      - name: geoip-data
        persistentVolumeClaim:
          claimName: geoip-pvc
