k8s/unmaintained/ackee.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ackee-deployment
  labels:
    app: ackee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ackee
  template:
    metadata:
      labels:
        app: ackee
    spec:
      containers:
        - name: ackee
          image: electerious/ackee
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3000
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ackee-service
  labels:
    app: ackee
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: tcp
  selector:
    app: ackee
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ackee-ingress
  labels:
    app: ackee
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: ackee.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: ackee-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ackee-lazztech-ingress
  labels:
    app: ackee
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.lazz.tech'
  rules:
  - host: analytics.lazz.tech
    http:
      paths:
      - backend:
          serviceName: ackee-service
          servicePort: 80
