k8s/unmaintained/home-assistant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-deployment
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      # needed for mdns device discover & homekit
      hostNetwork: true
      # needed to allow access to cluster's internal dns for services
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:stable
          securityContext:
            privileged: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /config
            name: home-assistant-data
            subPath: config
          - mountPath: /dev/ttyUSB0
            name: tty-usb0
          - mountPath: /dev/ttyUSB1
            name: tty-usb1
          - mountPath: /etc/localtime
            name: localtime
            readOnly: true
          imagePullPolicy: IfNotPresent
      volumes:
      - name: tty-usb0
        hostPath:
          path: /dev/ttyUSB0
      - name: tty-usb1
        hostPath:
          path: /dev/ttyUSB1
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: home-assistant-data
        persistentVolumeClaim:
          claimName: home-assistant-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  labels:
    app: home-assistant
spec:
  ports:
  - port: 80
    targetPort: 8123
    name: tcp
  selector:
    app: home-assistant
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-assistant-ingress
  labels:
    app: home-assistant
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: home-assistant.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: home-assistant-service
          servicePort: 80
